# quadruped_jsy

./: FK_0318_t1_슬라이드.py  IK_0124_v2.py  IK_0205_v1.py  IK_0206_v1.py  IK_0318_t1_슬라이드.py  README.md  ik_0317_걸음걸이패턴_시뮬.py  util.py
quardrupedel_0122/: quardrupedel_0122.ino
quardrupedel_0131/: quardrupedel_0131.ino
vettar_control/: package.xml  setup.cfg  setup.py
vettar_control/config/: vettar_params.yaml
vettar_control/launch/: vettar_control.launch.py
vettar_control/vettar_control/: gait_generator.py  ik_node.py
vettar_description/: package.xml  setup.cfg  setup.py
vettar_description/launch/: display.launch.py
vettar_description/meshes/: thighs_B_L.STL
vettar_description/rviz/: rviz_set.rviz
vettar_description/urdf/: vettar_description.urdf  vettar_description.urdf.xacro
vettar_description/vettar_description/: js_pub_test.py
vettar_interface/: CMakeLists.txt  package.xml  vettar_hardware_interface.xml
vettar_interface/config/: servo_pulses.yaml  v.yaml  vettar_controllers.yaml
vettar_interface/include/vettar_interface/: pca9685.hpp  servo_controller.hpp  vettar_hardware_interface.hpp
vettar_interface/launch/: vettar_interface.launch.py
vettar_interface/src/: pca9685.cpp  servo_controller.cpp  simulation_mode.cpp  vettar_hardware_interface.cpp
